--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   fastapi:
-    container_name: fastapi
+    container_name: the-sorting-hat
     build: .
     working_dir: /usr/src/app
     command: uvicorn main:app --host=0.0.0.0 --port=8000 --reload
@@ -12,10 +12,11 @@ services:
     ports:
       - "80:8000"
     restart: on-failure
-  db:
-    container_name: mydb
-    image: mysql:8.4
-    ports:
-        - "32001:3306"
-    environment:
-        MYSQL_ROOT_PASSWORD: root
+
+  # db:
+  #   container_name: mydb
+  #   image: mysql:8.4
+  #   ports:
+  #       - "32001:3306"
+  #   environment:
+  #       MYSQL_ROOT_PASSWORD: root
