--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,38 @@
-annotated-types==0.7.0
-anyio==4.4.0
-certifi==2024.7.4
-click==8.1.7
-dnspython==2.6.1
-email_validator==2.2.0
-fastapi==0.112.1
-fastapi-cli==0.0.5
-h11==0.14.0
-httpcore==1.0.5
+-i https://pypi.org/simple
+annotated-types==0.7.0; python_version >= '3.8'
+anyio==4.4.0; python_version >= '3.8'
+certifi==2024.7.4; python_version >= '3.6'
+click==8.1.7; python_version >= '3.7'
+dnspython==2.6.1; python_version >= '3.8'
+email-validator==2.2.0
+fastapi[standard]==0.112.1; python_version >= '3.8'
+fastapi-cli[standard]==0.0.5
+graphql-core==3.2.3; python_version >= '3.6' and python_version < '4'
+h11==0.14.0; python_version >= '3.7'
+httpcore==1.0.5; python_version >= '3.8'
 httptools==0.6.1
 httpx==0.27.0
-idna==3.7
-Jinja2==3.1.4
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-mdurl==0.1.2
-pydantic==2.8.2
-pydantic_core==2.20.1
-Pygments==2.18.0
+idna==3.7; python_version >= '3.5'
+jinja2==3.1.4
+markdown-it-py==3.0.0; python_version >= '3.8'
+markupsafe==2.1.5; python_version >= '3.7'
+mdurl==0.1.2; python_version >= '3.7'
+pydantic==2.8.2; python_version >= '3.8'
+pydantic-core==2.20.1; python_version >= '3.8'
+pygments==2.18.0; python_version >= '3.8'
+python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 python-dotenv==1.0.1
 python-multipart==0.0.9
-PyYAML==6.0.2
-rich==13.7.1
-shellingham==1.5.4
-sniffio==1.3.1
-starlette==0.38.2
-typer==0.12.3
-typing_extensions==4.12.2
-uvicorn==0.30.6
+pyyaml==6.0.2
+rich==13.7.1; python_full_version >= '3.7.0'
+shellingham==1.5.4; python_version >= '3.7'
+six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+sniffio==1.3.1; python_version >= '3.7'
+starlette==0.38.2; python_version >= '3.8'
+strawberry-graphql[fastapi]==0.237.3; python_version >= '3.8' and python_version < '4.0'
+typer==0.12.4; python_version >= '3.7'
+typing-extensions==4.12.2; python_version >= '3.8'
+uvicorn[standard]==0.30.6
 uvloop==0.20.0
 watchfiles==0.23.0
 websockets==12.0
